--- a/index.html
+++ b/index.html
@@ -12,23 +12,22 @@
         <h1>TEST YOUR KNOWLEDGE ON: LARGEMOUTH BASS</h1>
     </header>
     <main>
-        <section class="mainBox">
+        <div class="mainBox">
             <div>
                 <img src="Images/largemouth-bass.jpg" alt="Largemouth bass" class="images">
             </div>
-            <div class="questionsBox"><h2 class="question"> </h2></div>
-            <div><h2 class="overall"> </h2></div>
+            <div class="questionsBox"> </div>
+            <div class="overall"> </div>
             <div class="results"> </div>
-        </section>
-        <section class="stats">
+        </div>
+        <div class="stats">
             <div class="questionNumbers"> </div>
             <div class="score"> </div>
-        </section>
-        <section>
-            <div>
-                <button type="button" class="startButton button">START</button>
-            </div>
-        </section>
+        </div>
+  
+        <div>
+            <button type="button" class="startButton button">START</button>
+        </div>
     </main>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
